--- a/ProjetoChale/index.html
+++ b/ProjetoChale/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Chalé Hotel</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" href="https//:flavio.meganuv.com/ProjetoChale/css/estilo.css">
 </head>
 <body>
 
