--- a/fonts/index.html
+++ b/fonts/index.html
@@ -7,11 +7,42 @@
     <style>
         @font-face {
             font-family: "Dearplate California";
-            src: url(dear);
+            src: url("fontes/DealerplateCalifornia-Regular.woff");
+            src: url("fontes/DealerplateCalifornia-Regular.woff2");
+        }
+
+        @font-face {
+            font-family: "Dumbledor";
+            src: url("fontes/Dumbledor1.woff");
+            src: url("fontes/Dumbledor1.woff2");
+            src: url("fontes/Dumbledor2.woff");
+            src: url("fontes/Dumbledor2.woff2");
+            src: url("fontes/Dumbledor3.woff");
+            src: url("fontes/Dumbledor3.woff2");
+        }
+
+        @font-face {
+            font-family: "Qafientola";
+            src: url("fontes/Qafientola.woff");
+            src: url("fontes/Qafientola.woff2");
+        }
+
+        h1 {
+            font-family: "Dumbledor";
+        }
+
+        p {
+            font-family: "Dearplate California";
+        }
+
+        .oi {
+            font-family: "Qafientola";
         }
     </style>
 </head>
 <body>
     <h1>Fontes Customizadas</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos placeat, ea, iusto ad ipsum minima dicta velit natus illum, aperiam perferendis explicabo. Reprehenderit commodi sit eum aperiam animi officiis vitae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique officia eaque id consectetur corrupti autem, hic expedita reiciendis vitae fugiat nihil earum exercitationem? Perferendis delectus qui aliquid harum ex illum.</p>
+    <p class="oi">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci numquam veniam fuga itaque impedit non dolorem cum vitae. Nihil temporibus omnis repellat ex sequi, culpa laudantium sit vero pariatur tempore.</p>
 </body>
 </html>
