correção de código

--- a/taticas-de-desenho/lesson2.html
+++ b/taticas-de-desenho/lesson2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melhore Seu Desenho</title>
+    <title>Lição 2: Formas básicas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,16 +11,20 @@
         <h1>Melhore seu Desenho</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="lesson1.html">Lição 1</a></li>
-                <li><a href="lesson2.html">Lição 2</a></li>
                 <li><a href="lesson3.html">Lição 3</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Bem-vindo ao Melhore Seu Desenho</h2>
-            <p>Selecione uma lição na barra de navegação para começar.</p>
+        <section id="lesson2">
+            <h2>Lição 2: Formas básicas</h2>
+            <p>Quando você olha pra um objeto, ele pode ter uma ou várias formas, mas esse objeto tem uma forma principal, e nessa técnica fazemos essa forma, e depois vamos modelando como um vaso de barro, nessa técnica também juntamos a tática passada.</p>
+
+            <img src="imagens/foto2.jpg" alt="Exemplo de formas básicas">
+
+            <p>E agora só pra praticar, tenta fazer um notebook ou um vaso.</p>
         </section>
     </main>
     <footer>
