--- a/taticas-de-desenho/lesson3.html
+++ b/taticas-de-desenho/lesson3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melhore Seu Desenho</title>
+    <title>Lição 3: Sombra realista</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,16 +11,17 @@
         <h1>Melhore seu Desenho</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="lesson1.html">Lição 1</a></li>
                 <li><a href="lesson2.html">Lição 2</a></li>
-                <li><a href="lesson3.html">Lição 3</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Bem-vindo ao Melhore Seu Desenho</h2>
-            <p>Selecione uma lição na barra de navegação para começar.</p>
+        <section id="lesson3">
+            <h2>Lição 3: Sombra realista</h2>
+            <p>Tá, se você já leu as 2 lições passadas, já pode ler essa, se não, volta lá, as sombras são mais fáceis de se fazer com o lápis, mas quando você já manja em desenho, vale a pena fazer uma sombra com a caneta, por que ela tem uma precisão maior, mas se você ainda é iniciante, faz a sombra primeiro com lápis e depois com cuidado bota a caneta por cima.</p>
+            <img src="imagens/foto3.jpg" alt="Exemplo de sombra realista">
         </section>
     </main>
     <footer>
