correção de código

--- a/ProjetoCSS3/fontes_cores.html
+++ b/ProjetoCSS3/fontes_cores.html
@@ -13,6 +13,6 @@
 <body>
     <!-- As fontes tem vários estilos, como: "Times New Roman", "Courier New", etc... Mas tem as categorias delas, e essas são: "Serif", "Sans-Serif", "Monospace", "Cursive", "Fantasy" e "Decorative", esses estilos são a raiz das fontes. -->
     <h1>Oi 1</h1>
-    <p class="formatação">Conteúdo</p>
+    <p class="formatação">Contéudo</p>
 </body>
 </html>
