--- a/ProjetoChale/index.html
+++ b/ProjetoChale/index.html
@@ -52,7 +52,7 @@
 				</h2>
 
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id congue velit, in cursus augue. Morbi vel orci mattis, condimentum arcu in, sodales ligula. Quisque sollicitudin erat vulputate libero fermentum, eu gravida velit mollis. Sed sed viverra nunc. Duis egestas sapien lectus, convallis sollicitudin leo porttitor non. Ut at massa ac tortor posuere accumsan at eu nunc. Nulla dui augue, dignissim vel diam in, tempus aliquam dui. Integer sed sem lorem. Nam a est sed sapien egestas tincidunt eget et nunc. Integer tristique nunc et nisl pharetra ultricies. Curabitur sit amet est lacus.
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc id congue velit, in cursus augu e. Morbi vel orci mattis, condimentum arcu in, sodales ligula. Quisque sollicitudin erat vulputate libero fermentum, eu gravida velit mollis. Sed sed viverra nunc. Duis egestas sapien lectus, convallis sollicitudin leo porttitor non. Ut at massa ac tortor posuere accumsan at eu nunc. Nulla dui augue, dignissim vel diam in, tempus aliquam dui. Integer sed sem lorem. Nam a est sed sapien egestas tincidunt eget et nunc. Integer tristique nunc et nisl pharetra ultricies. Curabitur sit amet est lacus.
 					</p>
 
 					<p>
