--- a/css3-intermediario-avancado/arredondamento.html
+++ b/css3-intermediario-avancado/arredondamento.html
@@ -10,7 +10,7 @@
     <div class="caixa">
         <h2>Cabeçalho</h2>
         <p class="caixa">Lorem ipsum dolor sit amet consectetur adi elit. Nobis dolor quam aut autem illum.</p>
-        <p class="ultimo">Lorem ipsum dolor sit amet consectetur adi elit. Nobis dolor quam aut autem illum.</p>
+        <p class="ultimo">Lorem ipsum dolor sit amet consectetur adi elit. Nobis dolor qiuam aut autem illum.</p>
     </div>
 </body>
 </html>
