--- a/css3-intermediario-avancado/layout.html
+++ b/css3-intermediario-avancado/layout.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="marca">Marca</div>
+		<div id="marca">Ma rca</div>
 		<div id="conteudo">
 			<div id="conteudo-principal">
 				<h2>Conteúdo principal</h2> 
