--- a/css3-recursos/degrades.html
+++ b/css3-recursos/degrades.html
@@ -8,7 +8,7 @@
 <body>
     <div id="caixa">
         <h1>Lorem ipsum dolor, sit amet</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nihil maxime quo quae ipsam voluptatibus aliquam maiores perferendis nesciunt commodi culpa corrupti, sapiente, at ullam, consequatur dolorem excepturi eos deserunt!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nihil maxime quo quae ipsam voluptatibus aliquam maiores perferendis nesciunt commodi culpa corrupti, sapiente, at ulilam, consequatur dolorem excepturi eos deserunt!</p>
     </div>
 </body>
 </html>
