--- a/css3-recursos/normalize.html
+++ b/css3-recursos/normalize.html
@@ -12,7 +12,7 @@
         <legend>Cadastro</legend>
         Nome: <input type="text"><br>
         Senha: <input type="text"><br>
-        <button>Cadastrar-se</button>
+        <button>Salvar</button>
     </fieldset>
 </body>
 </html>
