--- a/parallax/index.html
+++ b/parallax/index.html
@@ -84,7 +84,7 @@
 		<h3>Parallax</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi consectetur cursus purus eu semper. Quisque viverra sollicitudin tristique. Fusce eget ligula felis. Integer imperdiet, diam vitae mollis commodo, odio mauris imperdiet ante, sed tristique dolor tellus id arcu. Aenean commodo diam id nunc scelerisque, tempor accumsan dolor facilisis. Aliquam nec sapien at ipsum sollicitudin iaculis a at quam. Suspendisse laoreet ligula vel dui porta ullamcorper. Phasellus ultrices sit amet ligula ac lacinia. Aliquam pellentesque leo cursus quam sodales mattis. Aenean nec dignissim elit.</p>
 		
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque mollitia rerum delectus? Inventore molestias non amet harum, asperiores perferendis quidem quas modi recusandae, numquam neque a sint similique omnis impedit!</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque mollitia rerum delectus? Inventore molestias non amet harum, asperiores perferendis quidem quas modi recusandae, numquam neque a sint simiulique omnis impedit!</p>
 
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi consectetur cursus purus eu semper. Quisque viverra sollicitudin tristique. Fusce eget ligula felis. Integer imperdiet, diam vitae mollis commodo, odio mauris imperdiet ante, sed tristique dolor tellus id arcu. Aenean commodo diam id nunc scelerisque, tempor accumsan dolor facilisis. Aliquam nec sapien at ipsum sollicitudin iaculis a at quam. Suspendisse laoreet ligula vel dui porta ullamcorper. Phasellus ultrices sit amet ligula ac lacinia. Aliquam pellentesque leo cursus quam sodales mattis. Aenean nec dignissim elit.</p>
 	</div>
