correção de código

--- a/taticas-de-desenho/index.html
+++ b/taticas-de-desenho/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section>
-            <h2>Bem-vindo ao Melhore Seu Desenho</h2>
+            <h2 id="title">Bem-vindo ao Melhore Seu Desenho</h2>
             <p>Selecione uma lição na barra de navegação para começar.</p>
         </section>
     </main>
