--- a/taticas-de-desenho/lesson1.html
+++ b/taticas-de-desenho/lesson1.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Melhore seu Desenho</h1>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="lesson2.html">Lição 2</a></li>
                 <li><a href="lesson3.html">Lição 3</a></li>
@@ -26,7 +26,7 @@
 
             <p>Eu sei que a minha letra é muito feia, mas vai praticando essa técnica, tenta fazer as seguintes coisas:</p>
 
-            <ul>
+            <ul id="lista">
                 <li>Uma xícara de café</li>
                 <li>Um livro</li>
                 <li>Um vaso de flores</li>
