correção de código

--- a/taticas-de-desenho/index.html
+++ b/taticas-de-desenho/index.html
@@ -19,8 +19,8 @@
     </header>
     <main>
         <section>
-            <h2 id="title">Bem-vindo ao Melhore Seu Desenho</h2>
-            <p>Selecione uma lição na barra de navegação para começar.</p>
+            <h2 id="title">Olá! Bem-vindo ao Melhore Seu Desenho</h2>
+            <p id="pag">| Selecione uma lição na barra de navegação acima, mas faça elas na ordem correta, e não seja perfeccionista, por favor.</p>
         </section>
     </main>
     <footer>
