--- a/taticas-de-desenho/lesson1.html
+++ b/taticas-de-desenho/lesson1.html
@@ -20,7 +20,7 @@
     <main>
         <section id="lesson1">
             <h2>Lição 1: Refinação do desenho</h2>
-            <p>Cara, se você quer aprender técnicas pra desenhar melhor, você tá no lugar certo, eu vou te ensinar 3 táticas de desenho em todo esse site. A primeira é que você não pode ser perfeccionista, eu era muito perfeccionista quando eu comecei a desenhar, se você for, só piora, você fica bravo com você mesmo e vai, vai, vai até uma hora que você simplesmente tá pegando fogo só de raiva, guarde bem isso, não seja perfeccionista. Pois é, quando você começa um desenho, você faz a base, e com essa técnica você começa a base fraquinho, depois vai refinando até você achar que tá bom.</p>
+            <p>Cara, se você quer aprender técnicas pra desenhar melhor, você tá no lugar certo, eu vou te ensinar 3 táticas de desenho em todo esse site. Mas uma coisa muito importante é que você não pode ser perfeccionista. Guarde bem isso, não seja perfeccionista. Pois é, continuando, quando você começa um desenho, você faz a base, e com essa técnica você começa a base fraquinho, depois vai refinando até você achar que tá bom.</p>
             
             <img src="imagens/foto1.jpg" alt="Exemplo de refinação de desenho">
 
