correção de código

--- a/html-recursos/novas-tags.html
+++ b/html-recursos/novas-tags.html
@@ -20,6 +20,10 @@
             <li><a href="">Notícias</a></li>
         </ul>
     </nav>
-    <footer></footer>
+    <footer>
+        Meu Site &trade;<br>
+        Todos os direitos reservados.<br>
+        2024&copy;
+    </footer>
 </body>
 </html>
