--- a/taticas-de-desenho/lesson1.html
+++ b/taticas-de-desenho/lesson1.html
@@ -43,7 +43,7 @@
         </section>
     </main>
     <footer>
-        <p><span>Melhore seu Desenho &trade;</span> <br> Todos os direitos reservados. <br> &copy;2024</p>
+        <p><span>Melhore seu Desenho &trade;</span> <br> Todos os direitos reservados. <br> 2024&copy;</p>
     </footer>
 </body>
 </html>
