--- a/html-recursos/novas-tags2.html
+++ b/html-recursos/novas-tags2.html
@@ -28,7 +28,7 @@
         <input type="range" name="range" id="range" min="1" max="20" value="10"><br><br>
 
         <label for="data">Data:</label>
-        <input type="date" name="data" id="data">
+        <input type="date" name="data" id="data"><br><br>
 
         <label for="cor">Cor:</label>
         <input type="color" name="cor" id="cor"><br><br>
