--- a/museu-nacional/index.html
+++ b/museu-nacional/index.html
@@ -37,7 +37,7 @@
 			<div id="conteudo">
 
 				<section id="capa">
-					<img src="img/museu.png">
+					<img src="imagens/museu.png">
 				</section>
 
 				<section id="postagens">
@@ -93,7 +93,7 @@
 
 			<aside>
 				<section id="depoimento">
-					<img src="img/depoimento.png">
+					<img src="imagens/depoimento.png">
 				</section>
 
 				<section id="visita">
@@ -119,19 +119,19 @@
 					<h4>Galeria de fotos</h4>
 					
 					<a href="">
-						<img src="img/imagem1.jpg" height="93" width="93" alt="Descricao imagem">
+						<img src="imagens/imagem1.jpg" height="93" width="93" alt="Descricao imagem">
 					</a>
 
 					<a href="">
-						<img src="img/imagem2.jpg" height="93" width="93">
+						<img src="imagens/imagem2.jpg" height="93" width="93">
 					</a>
 
 					<a href="">
-						<img src="img/imagem3.jpg" height="93" width="93">
+						<img src="imagens/imagem3.jpg" height="93" width="93">
 					</a>
 
 					<a href="">
-						<img src="img/imagem4.jpg" height="93" width="93">
+						<img src="imagens/imagem4.jpg" height="93" width="93">
 					</a>
 
 				</section>
