--- a/museu-nacional/index.html
+++ b/museu-nacional/index.html
@@ -102,10 +102,10 @@
 						<fieldset>
 							<legend>Selecione uma data</legend>
 							
-							<label for="data">Data</label>
-							<input class="campo" type="text" id="data" value="dd/mm/aaaa">
+							<label for="data">Data:</label>
+							<input type="date" name="data" id="data" placeholder="dd/mm/aaaa">
 
-							<label for="qtd">Qtd pessoas</label>
+							<label for="qtd">Qtd. pessoas:</label>
 							<input class="campo" style="width: 30px;" type="text" id="qtd" value="1">
 
 						</fieldset>
