correção de código

--- a/museu-nacional/index.html
+++ b/museu-nacional/index.html
@@ -123,7 +123,7 @@
 					</a>
 
 					<a href="">
-						<img src="imagens/imagem2.jpg" height="93" width="93">
+						<img src="imagens/imagem5.jpg" height="93" width="93">
 					</a>
 
 					<a href="">
@@ -131,7 +131,7 @@
 					</a>
 
 					<a href="">
-						<img src="imagens/imagem4.jpg" height="93" width="93">
+						<img src="imagens/imagem6.jpg" height="93" width="93">
 					</a>
 
 				</section>
@@ -139,12 +139,12 @@
 
 			<footer>
 				<p>
-					<a href="#">home</a>
-		            <a href="#">Exposições</a>
-		            <a href="#">Pesquisa</a>
-		            <a href="#">acervo</a>
-		            <a href="#">vídeos</a>
-		            <a href="#">fotos</a>
+					<a href="#">home</a> | 
+		            <a href="#">Exposições</a> | 
+		            <a href="#">Pesquisa</a> | 
+		            <a href="#">acervo</a> | 
+		            <a href="#">vídeos</a> | 
+		            <a href="#">fotos</a> | 
 		            <a href="#">contato</a>
 				</p>
 				<p>
