--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -6,10 +6,72 @@
     <title>Hello, world!</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
   </head>
-  <body>
-    <h1>Hello, world!</h1>
+  <body style="margin-bottom: 200px;padding: 16px;">
+    <h1>cabeçalho 1</h1>
+    <h2>cabeçalho 2</h2>
+    <h3>cabeçalho 3</h3>
+    <h4>cabeçalho 4</h4>
+    <h5>cabeçalho 5</h5>
+    <h6>cabeçalho 6</h6>
+
+    <br>
+    <br>
+
+    <h1 class="display-1">Display 1</h1>
+    <h1 class="display-2">Display 2</h1>
+    <h1 class="display-3">Display 3</h1>
+    <h1 class="display-4">Display 4</h1>
+
+    <br>
+    <br>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur delectus nam, esse eveniet suscipit sint repellat! Aut cum voluptas recusandae nisi! Maxime saepe sapiente animi fugit exercitationem, cumque doloremque assumenda!</p>
+
+    <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum beatae in facilis eveniet ullam perferendis? Amet soluta, eligendi laudantium velit eum quia. Officiis sit esse rerum iste at tempora est.</p>
+
+    <br>
+    <br>
+
+    <p class="text-monospace">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi provident cupiditate adipisci nisi architecto, accusantium perferendis vel aspernatur quidem voluptates atque optio voluptas mollitia. Repudiandae cum asperiores illum inventore delectus.</p>
+
+    <br>
+    <br>
+
+    <p class="font-weight-bold">Texto Negrito</p>
+    <p class="font-weight-normal">Texto Normal</p>
+    <p class="font-italic">Texto Itálico</p>
+
+    <br>
+    <br>
+
+    <p class="text-uppercase">letras maiúsculas</p>
+    <p class="text-lowercase">LETRAS MINÚSCULAS</p>
+    <p class="text text-capitalize">primeira maiúscula</p>
+
+    <br>
+    <br>
+
+    <p class="text-right">Direita</p>
+    <p class="text-left">Esquerda</p>
+    <p class="text-center">Centralizado</p>
+
+    <br>
+    <br>
+
+    <blockquote>
+      <p>Este é um bloco de citação!</p>
+    </blockquote>
+
+
+
+
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
