correção de código

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Hello, world!</title>
+    <title>Bootstrap</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
   </head>
   <body style="margin-bottom: 200px;padding: 16px;">
@@ -58,9 +58,44 @@
     <br>
     <br>
 
-    <blockquote>
+    <blockquote class="blockquote">
       <p>Este é um bloco de citação!</p>
     </blockquote>
+
+    <br>
+    <br>
+
+    <blockquote class="blockquote text-right">
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat eos fugiat officiis accusamus! A est voluptas aspernatur perferendis similique quae voluptatibus, soluta optio veritatis qui porro nihil corrupti iste distinctio.</p>
+      <footer class="blockquote-footer">Por
+        <cite>Jamilton Damasceno</cite>
+      </footer>
+    </blockquote>
+
+    <br>
+    <br>
+
+    <p class="text-truncate">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae repellat impedit aliquid eveniet facilis esse explicabo delectus inventore, ratione iste nobis tenetur laborum dolor voluptas nemo saepe eum quasi sint!</p>
+
+    <br>
+    <br>
+
+    <ul class="list-unstyled">
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
+
+
+    <br>
+    <br>
+
+    <ul class="list-inline">
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
+
 
 
 
