--- a/taticas-de-desenho/lesson1.html
+++ b/taticas-de-desenho/lesson1.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Melhore seu Desenho</h1>
-        <nav>
+        <nav class="sticky-top">
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="lesson2.html">Lição 2</a></li>
