--- a/taticas-de-desenho/lesson2.html
+++ b/taticas-de-desenho/lesson2.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Melhore seu Desenho</h1>
-        <nav>
+        <nav class="sticky-top">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="lesson1.html">Lição 1</a></li>
