--- a/taticas-de-desenho/index.html
+++ b/taticas-de-desenho/index.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melhore Seu Desenho</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Melhore seu desenho</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+  </head>
+  <body style="margin-bottom: 200px;padding: 16px;">
     <header>
         <h1>Melhore seu Desenho</h1>
-        <nav>
-            <ul>
-                <li><a href="lesson1.html">Lição 1</a></li>
-                <li><a href="lesson2.html">Lição 2</a></li>
-                <li><a href="lesson3.html">Lição 3</a></li>
-            </ul>
-        </nav>
+            <nav class="sticky-top">
+                <ul>
+                    <li><a href="lesson1.html">Lição 1</a></li>
+                    <li><a href="lesson2.html">Lição 2</a></li>
+                    <li><a href="lesson3.html">Lição 3</a></li>
+                </ul>
+            </nav>
     </header>
     <main>
         <section>
@@ -26,5 +26,18 @@
     <footer>
         <p><span>Melhore seu Desenho &trade;</span> <br> Todos os direitos reservados. <br> 2024&copy;</p>
     </footer>
-</body>
+
+
+
+
+
+
+
+
+    
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
