--- a/bootstrap/apoio-breakpoints.html
+++ b/bootstrap/apoio-breakpoints.html
@@ -7,99 +7,40 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
 
   <style>
-        
-        /* Dispositivos pequenos (celulares na horizontal) */
-      @media (min-width: 576px) {
-        body {
-          background: red;
-        }
+            /* // Extra small devices (portrait phones, less than 576px) */
+    @media (max-width: 575.98px) {
+      body {
+        background: palegreen;
       }
+    }
 
-        /* Dispositivos médios (tablets, 768px e superior) */
-      @media (min-width: 768px) {
-        body {
-           background: blue;
-        }
+    /* // Small devigces (landscape phones, 576px and up) */
+    @media (min-width: 576px) and (max-width: 767.98px) {
+      body {
+        background: goldenrod;
       }
+    }
 
-        /* Dispositivos grandes (desktops, 992px e superior) */
-      @media (min-width: 992px) {
-        body{
-          background: green;
-        }
+    /* // Medium devices (tablets, 768px and up) */
+    @media (min-width: 768px) and (max-width: 991.98px) {
+      body {
+        background: darksalmon;
       }
+    }
 
-        /* Dispositivos extra grandes (desktops grandes, 1200px e superior) */
-      @media (min-width: 1200px) {
-        body{
-          background: gray;
-        }
+    /* // Large devices (desktops, 992px and up) */
+    @media (min-width: 992px) and (max-width: 1199.98px) {
+      body {
+        background: gray;
       }
+    }
 
-        /**************************/
-        /* Dispositivos extra pequenos (celulares na vertical) */
-        @media (min-width: 576px) {
-          body{
-            background: yellow;
-          }
-        }
-
-        /* Dispositivos pequenos (celulares na horizontal) */
-        @media (min-width: 576px) {
-          body{
-            background: fuchsia;
-          }
-        }
-
-        /* Dispositivos médios (tablets) */
-        @media (min-width: 576px) {
-          body{
-            background: khaki;
-          }
-        }
-
-        /* Dispositivos grandes (desktops) */
-        @media (min-width: 576px) {
-          body{
-            background: rebeccapurple;
-          }
-        }
-
-        /******************************************/
-        /* Dispositivos extra pequenos (celulares na vertical, menores que 576px) */
-        @media (min-width: 576px) {
-          body{
-            background: palegreen;
-          }
-        }
-
-        /* Dispositivos pequenos (celulares na horizontal, 576px e maiores) */
-        @media (min-width: 576px) and (min-width: 576px) {
-          body{
-            background: darksalmon;
-          }
-        }
-
-        /* Dispositivos médios (tablets, 768px e maiores) */
-        @media (min-width: 576px) and (min-width: 576px) {
-          body{
-            background: gray;
-          }
-        }
-
-        /* Dispositivos grandes (desktops, 992px e maiores) */
-        @media (min-width: 576px) and (min-width: 576px) {
-          body{
-            background: gray;
-          }
-        }
-
-        /* Dispositivos extra grandes (desktops grandes, 1200px e maiores) */
-        @media (min-width: 576px) {
-          body{
-            background: gray;
-          }
-        }
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media (min-width: 1200px) {
+      body {
+        background: orangered;
+      }
+    }
 
     </style>
 
