correção de código

--- a/bootstrap/apoio-breakpoints.html
+++ b/bootstrap/apoio-breakpoints.html
@@ -14,7 +14,7 @@
       }
     }
 
-    /* // Small devigces (landscape phones, 576px and up) */
+    /* // Small devices (landscape phones, 576px and up) */
     @media (min-width: 576px) and (max-width: 767.98px) {
       body {
         background: goldenrod;
@@ -47,7 +47,7 @@
   </head>
 
   <body style="margin-bottom: 200px; width: 600px; margin: 0 auto;">
-
+    <p>oi</p>
 
 
 
