--- a/bootstrap/apoio-botoes.html
+++ b/bootstrap/apoio-botoes.html
@@ -66,11 +66,9 @@
     <h3>Toolbar de botões</h3>
     <div class="btn-toolbar">
         <div class="btn-group">
-           <button class="btn btn-danger" type="button">1</button>
-           <button class="btn btn-danger" type="button">2</button>
-           <button class="btn btn-danger" type="button">3</button>
-        </div>
-        <div class="btn-group">
+            <button class="btn btn-danger" type="button">1</button>
+            <button class="btn btn-danger" type="button">2</button>
+            <button class="btn btn-danger" type="button">3</button>
             <button class="btn btn-danger" type="button">4</button>
             <button class="btn btn-danger" type="button">5</button>
         </div>
@@ -79,13 +77,12 @@
     <h3>Botões dropdown</h3>
     <div class="dropdown">
         <button class="btn btn-success dropdown-toggle" 
-        data-toggle="dropdown" type="button">
-            Clique
-        </button>
+        data-toggle="dropdown" type="button">Clique</button>
         <div class="dropdown-menu">
             <a href="#" class="dropdown-item">Link 1</a>
             <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item">Link 2</a>
+            <div class="dropdown-divider"></div>
             <a href="#" class="dropdown-item">Link 3</a>
         </div>
     </div>
