--- a/spotify/index.html
+++ b/spotify/index.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <!-- Meta tags Obrigatórias -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <title>Música para todos - Spotify</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
     <!-- HTML5Shiv -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
-
-    <!-- Estilo customizado -->
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
-
-    <title>Música para todos - Spotify</title>
     <link rel="icon" href="imagens/favicon.png">
   </head>
   <body>
-    
     <header><!-- inicio Cabecalho -->
-      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
+      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-peta">
         <div class="container">
           
           <a href="index.html" class="navbar-brand">
@@ -136,7 +127,7 @@
             <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
 
             <h3>Playlists</h3>
-            <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+            <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
 
             <h3>Novos lançamentos</h3>
             <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
@@ -152,19 +143,14 @@
         <div class="row">
           <div class="col-md-4">
 
-            <h2>Fácil</h2>
             <h3>Buscar</h3>
-            <p>Já sabe o que quer escutar? É só procurar e apertar o play.
-            </p>
+            <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
 
             <h3>Navegar</h3>
-            <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.
-            </p>
+            <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists do seu jeitinho.</p>
 
             <h3>Descobrir</h3>
-            <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.
-            </p>
-
+            <p>Curta músicas novas toda segunda-feira com uma playlist personalizada do seu jeito. Ou relaxe e curta as melhores rádios.</p>
           </div>
           <div class="col-md-8">
             <div class="row rotacionar">
@@ -187,28 +173,38 @@
             <img src="imagens/spotify.svg" width="142">
           </div>
           <div class="col-md-2">
-            <h4>company</h4>
+            <h4>Empresa</h4>
             <ul class="navbar-nav">
-              <li><a href="">Sobre</a></li>
-              <li><a href="">Empregos</a></li>
-              <li><a href="">Imprensa</a></li>
-              <li><a href="">Novidades</a></li>
+              <li><a href="" class="nav-link">Sobre</a></li>
+              <li><a href="" class="nav-link">Empregos</a></li>
+              <li><a href="" class="nav-link">Imprensa</a></li>
+              <li><a href="" class="nav-link">Novidades</a></li>
             </ul>
           </div>
           <div class="col-md-2">
-            <h4>comunidades</h4>
+            <h4>Comunidades</h4>
             <ul class="navbar-nav">
-              <li><a href="">Artistas</a></li>
-              <li><a href="">Desenvolvedores</a></li>
-              <li><a href="">Marcas</a></li>
+              <li><a href="" class="nav-link">Artistas</a></li>
+              <li><a href="" class="nav-link">Desenvolvedores</a></li>
+              <li><a href="" class="nav-link">Marcas</a></li>
             </ul>
           </div>
           <div class="col-md-2">
-            <h4>links uteis</h4>
+            <h4>links Úteis</h4>
             <ul class="navbar-nav">
-              <li><a href="">Ajuda</a></li>
-              <li><a href="">Presentes</a></li>
-              <li><a href="">Player da web</a></li>
+              <li><a href="" class="nav-link">Suporte</a></li>
+              <li><a href="" class="nav-link">Aplicativo móvel grátis</a></li>
+              <li><a href="" class="nav-link">Player da web</a></li>
+            </ul>
+          </div>
+          <div class="col-md-2">
+            <h4>Planos do Spotify</h4>
+            <ul class="navbar-nav">
+              <li><a href="" class="nav-link">Premium Individual</a></li>
+              <li><a href="" class="nav-link">Premium Duo</a></li>
+              <li><a href="" class="nav-link">Premium Família</a></li>
+              <li><a href="" class="nav-link">Premium Universitário</a></li>
+              <li><a href="" class="nav-link">Spotify Free</a></li>
             </ul>
           </div>
           <div class="col-md-4">
