--- a/spotify/index.html
+++ b/spotify/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header><!-- inicio Cabecalho -->
-      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-peta">
+      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-preta">
         <div class="container">
           
           <a href="index.html" class="navbar-brand">
