correção de código

--- a/bootstrap/apoio-barra-navegacao.html
+++ b/bootstrap/apoio-barra-navegacao.html
@@ -59,13 +59,13 @@
         <!-- Logo -->
         <a href="" class="navbar-brand">Chalé Hotel</a>
 
-        <!-- Menu Hamburguer -->
+        <!-- Menu Hâmburguer -->
         <button class="navbar-toggler" data-toggle="collapse" 
         data-target="#navegacao">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <!-- navegacao -->
+        <!-- navegação -->
         <div class="collapse navbar-collapse" id="navegacao">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
