correção de código

--- a/bootstrap/apoio-listas.html
+++ b/bootstrap/apoio-listas.html
@@ -70,7 +70,7 @@
         <li>Atualizações<span class="badge badge-warning">96</span></li>
         <li>Spam <span class="badge badge-danger">167</span></li>
         <li>Rascunhos <span class="badge badge-info">9923</span></li>
-        <li>Lixeira </li> <span class="badge badge-light">76840</span></li>
+        <li>Lixeira</li> <span class="badge badge-light">76840</span></li>
     </ul>
     <br><br>
 
@@ -98,4 +98,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
+</html>
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap - listas</title>
+</head>
+<body>
+    
+</body>
 </html>
