--- a/bootstrap/apoio-formularios.html
+++ b/bootstrap/apoio-formularios.html
@@ -117,7 +117,7 @@
         
         <div class="form-group">
             <label for="email-usuario">email</label>
-            <input class="form-control is-valid" type="email" id="email-usuario" placeholder="Digite seu e-mail">
+            <input class="form-control is-valid" type="email" id="email-usuario" placeholder="Ex.: exemplo@seuemail.com">
             <div class="valid-feedback">
                 Email válido
             </div>
@@ -125,7 +125,7 @@
 
         <div class="form-group">
             <label for="senha-usuario">Senha</label>
-            <input class="form-control is-valid" type="password" id="senha-usuario" placeholder="Digite sua senha">
+            <input class="form-control is-valid" type="password" id="senha-usuario" placeholder="Ex.: #exemplosobrenome5">
             <div class="invalid-feedback">
                 Senha inválida
             </div>
