correção de código

--- a/bootstrap/apoio-cartoes-parte1.html
+++ b/bootstrap/apoio-cartoes-parte1.html
@@ -35,14 +35,12 @@
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
         <a class="btn btn-outline-success" href="">Leia mais</a>
       </div>
-      <img class="card-img-bottom" src="https://source.unsplash.com/random/600x200">
+      <img class="card-img-bottom" src="images/unsplash1.jpg">
     </div>
-
-    <br><br>
 
     <h3 class="border-bottom">Cartão com imagem sobreposta</h3>
     <div class="card text-white">
-      <img class="card-img" src="https://source.unsplash.com/random/600x250">
+      <img class="card-img" src="images/unsplash2.jpg">
       <div class="card-img-overlay">
         <h4 class="card-title">Título do cartão</h4>
         <h6 class="card-subtitle">Subtítulo do cartão</h6>
@@ -155,7 +153,7 @@
       
       <!-- inicio cartao -->
       <div class="card text-white">
-        <img class="card-img" src="https://source.unsplash.com/random/600x350">
+        <img class="card-img" src="images/unsplash1.jpg">
         <div class="card-img-overlay">
           <h4 class="card-title">Título do cartão</h4>
           <h6 class="card-subtitle">Subtítulo do cartão</h6>
