correção de código

--- a/bootstrap/apoio-cartoes-parte1.html
+++ b/bootstrap/apoio-cartoes-parte1.html
@@ -25,7 +25,9 @@
       </div>
     </div>
 
-    <br><br>
+    <br>
+    <hr>
+    <br>
 
     <h3 class="border-bottom">Cartão com imagem</h3>
     <div class="card">
@@ -49,7 +51,9 @@
       </div>
     </div>
 
-    <br><br>
+    <br>
+    <hr>
+    <br>
 
     <h3 class="border-bottom">Cartão com cabeçalho</h3>
     <div class="card">
@@ -64,10 +68,12 @@
       </div>
     </div>
 
-    <br><br>
+    <br>
+    <hr>
+    <br>
 
     <h3 class="border-bottom">Cartão com cabeçalho e rodapé / Alinhamento</h3>
-    <div class="card text-right">
+    <div class="card text-center">
       <div class="card-header">
         Cabeçalho do cartão
       </div>
@@ -75,14 +81,16 @@
         <h4 class="card-title">Título do cartão</h4>
         <h6 class="card-subtitle">Subtítulo do cartão</h6>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
-        <a class="btn btn-outline-danger" href="">Leia mais</a>
+        <a class="btn btn-outline-danger btn-block" href="">Leia mais</a>
       </div>
       <div class="card-footer">
         Rodapé do cartão
       </div>
     </div>
 
-    <br><br>
+    <br>
+    <hr>
+    <br>
 
     <h3 class="border-bottom">Cartão com navegação</h3>
     <div class="card">
@@ -107,7 +115,9 @@
       </div>
     </div>
 
-    <br><br>
+    <br>
+    <hr>
+    <br>
 
     <h3 class="border-bottom">Cartão com cores de fundo</h3>
     <div class="card bg-primary text-white mb-2">
@@ -134,10 +144,12 @@
       </div>
     </div>
 
-    <br><br>
+    <br>
+    <hr>
+    <br>
 
     <h3 class="border-bottom">Cartão com bordas</h3>
-    <div class="card border-danger mb-2">
+    <div class="card border-primary mb-2">
       <div class="card-body">
         <h4 class="card-title">Título do cartão</h4>
         <h6 class="card-subtitle">Subtítulo do cartão</h6>
@@ -146,7 +158,18 @@
       </div>
     </div>
 
-    <br><br>
+    <div class="card border-warning mb-2">
+      <div class="card-body">
+        <h4 class="card-title">Título do cartão</h4>
+        <h6 class="card-subtitle">Subtítulo do cartão</h6>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
+        <a class="btn btn-outline-light" href="">Leia mais</a>
+      </div>
+    </div>
+
+    <br>
+    <hr>
+    <br>
 
     <h3 class="border-bottom">Cartão com colunas</h3>
     <div class="card-columns">
