correção de código

--- a/bootstrap/apoio-jumbotron-alinhamento-imagens.html
+++ b/bootstrap/apoio-jumbotron-alinhamento-imagens.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <style>
+      img{
+        width: 60px;
+        height: 60px;
+      }
+    </style>
   </head>
   <body style="margin-bottom: 200px;padding: 16px;">
     
@@ -21,7 +27,7 @@
 
     <h3 class="border-bottom">Estrutura para imagens</h3>
     <div class="media">
-      <img class="mr-3" src="https://source.unsplash.com/random/60x60">
+      <img class="mr-3" src="images/geoengineering-earth-spanner.jpg">
       <div class="media-body">
         <h5>Título do conteúdo</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
@@ -32,7 +38,7 @@
 
     <h3 class="border-bottom">Alinhamentos: align-self-ALINHAMENTO (start, center, end) </h3>
     <div class="media">
-      <img class="mr-3 align-self-center" src="https://source.unsplash.com/random/60x60">
+      <img class="mr-3 align-self-center" src="images/geoengineering-earth-spanner.jpg">
       <div class="media-body">
         <h5>Título do conteúdo</h5>
         <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
@@ -44,7 +50,7 @@
     <ul class="list-unstyled">
       
       <li class="media border-bottom pb-2">
-        <img class="mr-2 align-self-center" src="https://source.unsplash.com/random/60x60">
+        <img class="mr-2 align-self-center" src="images/geoengineering-earth-spanner.jpg">
         <div class="media-body">
           <h5>Título do conteúdo</h5>
           <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl.</p>
@@ -52,7 +58,7 @@
       </li>
 
       <li class="media border-bottom pb-2 pt-2">
-        <img class="mr-2 align-self-center" src="https://source.unsplash.com/random/60x60">
+        <img class="mr-2 align-self-center" src="images/geoengineering-earth-spanner.jpg">
         <div class="media-body">
           <h5>Título do conteúdo</h5>
           <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl.</p>
