--- a/bootstrap/apoio-jumbotron-alinhamento-imagens.html
+++ b/bootstrap/apoio-jumbotron-alinhamento-imagens.html
@@ -15,7 +15,7 @@
   <body style="margin-bottom: 200px;padding: 16px;">
     
     <h3 class="border-bottom">Jumbotron</h3>
-    <div class="jumbotron">
+    <div class="jumbotron text-center">
         <div class="container">
           <h1 class="display-4">Música para todos.</h1>
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
@@ -27,7 +27,7 @@
 
     <h3 class="border-bottom">Estrutura para imagens</h3>
     <div class="media">
-      <img class="mr-3" src="images/geoengineering-earth-spanner.jpg">
+      <img class="mr-3" src="https://picsum.photos/60/60">
       <div class="media-body">
         <h5>Título do conteúdo</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
@@ -38,7 +38,7 @@
 
     <h3 class="border-bottom">Alinhamentos: align-self-ALINHAMENTO (start, center, end) </h3>
     <div class="media">
-      <img class="mr-3 align-self-center" src="images/geoengineering-earth-spanner.jpg">
+      <img class="mr-3 align-self-center" src="https://picsum.photos/60/60">
       <div class="media-body">
         <h5>Título do conteúdo</h5>
         <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl. Vivamus sed est pulvinar, aliquet purus ut, dictum elit.</p>
@@ -50,7 +50,7 @@
     <ul class="list-unstyled">
       
       <li class="media border-bottom pb-2">
-        <img class="mr-2 align-self-center" src="images/geoengineering-earth-spanner.jpg">
+        <img class="mr-2 align-self-center" src="https://picsum.photos/60/60">
         <div class="media-body">
           <h5>Título do conteúdo</h5>
           <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl.</p>
@@ -58,7 +58,7 @@
       </li>
 
       <li class="media border-bottom pb-2 pt-2">
-        <img class="mr-2 align-self-center" src="images/geoengineering-earth-spanner.jpg">
+        <img class="mr-2 align-self-center" src="https://picsum.photos/60/60">
         <div class="media-body">
           <h5>Título do conteúdo</h5>
           <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sapien dui, feugiat et lorem quis, fringilla maximus nisl.</p>
