correção de código

--- a/bootstrap/apoio-font-awesome.html
+++ b/bootstrap/apoio-font-awesome.html
@@ -12,12 +12,9 @@
     
     <h3 class="border-bottom">Font awesome</h3>
     <i class="fas fa-battery-half display-3 text-danger"></i>
-    <span class="fas fa-bomb display-3 text-warning"></span>
+    <span class="fas fa-bomb display-3"></span>
 
-    <button class="btn btn-danger btn-lg">
-      <i class="fas fa-bomb"></i>
-      Clique aqui
-    </button>
+    <button class="btn btn-dark btn-lg"> <i class="fas fa-bomb"></i> Clique aqui</button>
 
     
 
