--- a/base.html
+++ b/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
@@ -7,14 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
   </head>
   <body style="margin-bottom: 200px;padding: 16px;">
-    <h1>Hello, world!</h1>
-
-
-
-
-
-
-
+    <!-- Obs.: O style acima é opcional -->
 
     
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
