--- a/bootstrap/apoio-grid.html
+++ b/bootstrap/apoio-grid.html
@@ -20,25 +20,25 @@
   <body>
     <div class="container marcador-container">
       <div class="row">
-        <div class="marcador col-md-6 col-xl-4">
+        <div class="marcador col-12 col-sm-12 col-md-6 col-xl-4">
           <h2>Lorem ipsum dolorem sit amet</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper ullamcorper lorem eu tempor. Mauris ut ultricies diam, eu vestibulum lectus.</p>
           <button class="btn btn-warning">Leia mais</button>
         </div>
 
-        <div class="marcador col-md-6 col-xl-4">
+        <div class="marcador col-12 col-sm-12 col-md-6 col-xl-4">
           <h2>Lorem ipsum dolorem sit amet</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper ullamcorper lorem eu tempor. Mauris ut ultricies diam, eu vestibulum lectus.</p>
           <button class="btn btn-warning">Leia mais</button>
         </div>
 
-        <div class="marcador col-md-6 col-xl-4">
+        <div class="marcador col-12 col-sm-12 col-md-6 col-xl-4">
           <h2>Lorem ipsum dolorem sit amet</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper ullamcorper lorem eu tempor. Mauris ut ultricies diam, eu vestibulum lectus.</p>
           <button class="btn btn-warning">Leia mais</button>
         </div>
 
-        <div class="marcador col-md-12 col-xl-12">
+        <div class="marcador col-12 col-sm-12 col-md-12 col-xl-12">
           <h2>Lorem ipsum dolorem sit amet</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ullamcorper ullamcorper lorem eu tempor. Mauris ut ultricies diam, eu vestibulum lectus.</p>
           <button class="btn btn-warning">Leia mais</button>
