--- a/spotify-clone/index.html
+++ b/spotify-clone/index.html
@@ -11,7 +11,7 @@
     <![endif]-->
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 
-    <title>Música para todos - Spotify</title>
+    <title>Spotify Clone</title>
     <link rel="icon" href="imagens/favicon.png">
   </head>
   <body>
@@ -60,18 +60,18 @@
                 
                 <div class="carousel-item active">
                   <h1>Música para todos</h1>
-                  <a href="" class="btn btn-lg btn-custom btn-roxo">
+                  <a href="" class="btn btn-custom btn-roxo">
                     Aproveite o Spotify Free
                   </a>
 
-                  <a href="" class="btn btn-lg btn-custom btn-branco">
+                  <a href="" class="btn btn-custom btn-branco">
                     Obter Spotify Premium
                   </a>
                 </div>
 
                 <div class="carousel-item">
                   <h1>As melhores rádios</h1>
-                  <a href="" class="btn btn-lg btn-custom btn-branco">
+                  <a href="" class="btn btn-custom btn-branco">
                     <i class="fas fa-music"></i> Ouça agora
                   </a>
                 </div>
@@ -123,7 +123,7 @@
             <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
 
             <h3>Playlists</h3>
-            <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música.</p>
+            <p>No Spotify você encontra uma playlist para cada momento. E ainda pode fazer .</p>
 
             <h3>Novos lançamentos</h3>
             <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
@@ -139,7 +139,7 @@
         <div class="row">
           <div class="col-md-4">
 
-            <h2>Fácil</h2>
+            <h2>É fácil,</h2>
             <h3>Buscar</h3>
             <p>Já sabe o que quer escutar? É só procurar e apertar o play.
             </p>
@@ -174,7 +174,7 @@
             <img src="imagens/spotify.svg" width="142">
           </div>
           <div class="col-md-2">
-            <h4>company</h4>
+            <h4>Empresa</h4>
             <ul class="navbar-nav">
               <li><a href="">Sobre</a></li>
               <li><a href="">Empregos</a></li>
@@ -183,7 +183,7 @@
             </ul>
           </div>
           <div class="col-md-2">
-            <h4>comunidades</h4>
+            <h4>Comunidade</h4>
             <ul class="navbar-nav">
               <li><a href="">Artistas</a></li>
               <li><a href="">Desenvolvedores</a></li>
@@ -191,7 +191,7 @@
             </ul>
           </div>
           <div class="col-md-2">
-            <h4>links uteis</h4>
+            <h4>links úteis</h4>
             <ul class="navbar-nav">
               <li><a href="">Ajuda</a></li>
               <li><a href="">Presentes</a></li>
