correção de código

--- a/javascript/scripts-iniciais/funcoes.html
+++ b/javascript/scripts-iniciais/funcoes.html
@@ -7,13 +7,19 @@
     <script>
         // Function Void|
         // Function Return|
+
+        let Largura = prompt('Digite a largura do terreno')
+        let comprimento = prompt('Digite o comprimento do terreno')
+
+        let area = calcularAreaTerreno(Largura, comprimento)
+
+        document.write('O terreno possui ' + area + ' m²')
+        
         function calcularAreaTerreno (Largura, comprimento ) {
             // Variável
             let area = Largura * comprimento
-            document.write('O terreno possui ' + area + ' metros quadrados')
+            return area
         }
-
-        calcularAreaTerreno(24, 48)
     </script>
 </head>
 <body>
