--- a/js/scripts/ifelse_operadores.html
+++ b/js/scripts/ifelse_operadores.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>JavaScript</title>
     <script>
-
+      // operadores condicionais
       var nota = prompt('Digite a nota do aluno:')
       var media = 7
 
@@ -15,6 +15,8 @@
         document.write('Reprovado')
       
       }
+
+      // operadores lógicos
 
     </script>
   </head>
